--- a/src/containers/03-programs/programs.scss
+++ b/src/containers/03-programs/programs.scss
@@ -1,5 +1,35 @@
 .programs {
-  h2 {
-    font-size: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  .cards-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 2.5vw;
+    grid-template-rows: auto;
+    row-gap: 15px;
+
+    @media screen and (width < 992px) {
+      & {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+    @media screen and (width < 768px) {
+      & {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+    @media screen and (width < 375px) {
+      & {
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
   }
 }
+
+// @media (min-width: 576px)
+// @media (min-width: 768px)
+// @media (min-width: 992px)
+// @media (min-width: 1200px)
+// @media (min-width: 1400px)
