--- a/src/components/01-navbar/navbar.scss
+++ b/src/components/01-navbar/navbar.scss
@@ -1,21 +1,20 @@
 .navbar {
-  position: sticky;
-  overflow: visible;
-  top: 0px;
   z-index: 1;
+  position: sticky;
+  top: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 calc(7.5vw - 8px);
   height: 7.5vh;
   max-height: 100px;
-  background-color: transparentize($color: #141414, $amount: 0.25);
+  padding: 0 calc(7.5vw - 8px);
+  background-color: transparentize($color: #1a1a1a, $amount: 0.1);
 
   .logo {
-    font-size: 22px;
-    font-weight: 700;
     cursor: pointer;
     user-select: none;
+    font-size: calc(var(--ft-sz) * 1.25);
+    font-weight: 700;
     transition: 300ms;
     &:hover {
       transform: scale(1.05);
@@ -27,10 +26,12 @@
 
   ul {
     display: flex;
-    gap: 20px;
+    justify-content: space-between;
+    gap: 2vw;
     list-style: none;
 
     li {
+      min-width: fit-content;
       transition: 300ms;
       &:hover {
         transform: scale(1.05);
@@ -39,7 +40,7 @@
         transform: scale(0.95);
       }
       a {
-        font-size: 16px;
+        font-size: var(--ft-sz);
         font-weight: 600;
         color: #ffffff;
         text-decoration: none;
