--- a/src/components/03-program-card/program-card.scss
+++ b/src/components/03-program-card/program-card.scss
@@ -1,12 +1,13 @@
 .card {
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
-  width: 20vw;
   border: 2px solid #ffffff;
   border-radius: 15px;
 
   .card-bg {
     width: 100%;
-    height: 200px;
+    height: 15vh;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -15,29 +16,33 @@
   .program-info {
     display: flex;
     flex-direction: column;
-    padding: 25px;
+    padding: 7.5%;
 
     .card-name {
-      margin-bottom: 10px;
+      margin-bottom: 2.5%;
     }
 
     .card-description {
-      margin-bottom: 20px;
+      margin-bottom: 7.5%;
     }
 
     .buttonsWrapper {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
+      gap: calc(1vw + 1px);
 
       button {
-        font-family: inherit;
-        font-size: 14px;
+        cursor: pointer;
+        flex: 1;
+        min-width: fit-content;
         background-color: inherit;
+        padding: 2.5%;
+        font-family: inherit;
+        font-size: inherit;
         color: #ffffff;
         border: 2px solid #ffffff;
         border-radius: 5px;
-        padding: 5px;
-        cursor: pointer;
         transition: 300ms;
 
         &:hover {
@@ -47,7 +52,7 @@
           transform: scale(1.1);
         }
         &:active {
-            transform: scale(0.9);
+          transform: scale(0.9);
         }
       }
     }
