--- a/src/containers/01-header/header.scss
+++ b/src/containers/01-header/header.scss
@@ -1,13 +1,11 @@
 .header {
-  padding: 0 0 calc(1.4vw + 9px);
+  padding: 0 0 calc(5vh + 10px);
 
   header {
-    // position: relative;
-    width: 100vw;
-    height: 92.5vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 92.5dvh;
 
     background-image: url("../../assets/header-bg.png");
     background-repeat: no-repeat;
@@ -15,6 +13,7 @@
     background-size: cover;
 
     .header-content {
+      // padding: 12.5vh 0;
       width: 100%;
       height: 100%;
       display: flex;
@@ -24,16 +23,30 @@
       align-items: center;
       background-color: transparentize($color: #141414, $amount: 0.25);
 
-      h1 {
-        font-size: 44px;
-      }
       .header-text {
         max-width: 50%;
         display: flex;
         flex-direction: column;
         gap: 10px;
+
+        @media screen and (width < 1280px) {
+          & {
+            max-width: 65%;
+          }
+        }
+        @media screen and (width < 768px) {
+          & {
+            max-width: 80%;
+          }
+        }
+
+        h1 {
+          text-align: center;
+          // margin-bottom: 1vh;
+        }
+
         p {
-          font-size: 22px;
+          font-size: calc(var(--ft-sz) * 1.25);
           text-align: center;
         }
       }
