--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+:root {
+  --ft-sz: calc(0.4vw + 12.5px);
+  --bg-color: #141414;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -9,11 +14,17 @@
 body {
   width: 100vw;
   height: 100vh;
-  background-color: #141414;
+  overflow-x: hidden;
+  background-color: var(--bg-color);
   font-family: "Poppins", "Roboto", sans-serif;
   color: #ffffff;
+  font-size: var(--ft-sz);
 
   section {
-    padding: 0 calc(7.5vw - 8px) calc(1.4vw + 9px);
+    padding: 0 calc(7.5vw - 8px) calc(5vh + 10px);
+  }
+
+  h1 {
+    font-size: calc(var(--ft-sz) * 1.75);
   }
 }
