--- a/src/components/05-footer/footer.scss
+++ b/src/components/05-footer/footer.scss
@@ -10,7 +10,7 @@
     & {
       align-items: center;
       flex-direction: column;
-      padding: calc(1.4vw + 9px) calc(7.5vw - 8px);
+      padding: 3vh calc(7.5vw - 8px);
     }
   }
 
