--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -17,8 +17,15 @@ body {
   overflow-x: hidden;
   background-color: var(--bg-color);
   font-family: "Poppins", "Roboto", sans-serif;
-  color: #ffffff;
+  color: #FFFFFF;
   font-size: var(--ft-sz);
+
+  &.no-hover button:hover {
+    background-color: inherit;
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    transform: none;
+  }
 
   section {
     padding: 0 calc(7.5vw - 8px) calc(5vh + 10px);
