--- a/src/containers/01-header/header.scss
+++ b/src/containers/01-header/header.scss
@@ -7,7 +7,7 @@
     align-items: center;
     height: 92.5dvh;
 
-    background-image: url("../../assets/header-bg.png");
+    background-image: url("./assets/headerBg.png");
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
