--- a/src/containers/03-programs/programs.scss
+++ b/src/containers/03-programs/programs.scss
@@ -8,11 +8,12 @@
     grid-template-columns: repeat(4, 1fr);
     column-gap: 2.5vw;
     grid-template-rows: auto;
-    row-gap: 15px;
+    row-gap: 2.5vh;
 
     @media screen and (width < 992px) {
       & {
         grid-template-columns: repeat(3, 1fr);
+        row-gap: 1vh;
       }
     }
     @media screen and (width < 768px) {
